<resources>
    <string name="app_name">Alibaba</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="loading_video">正在载入视频...</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="resume_playing_title">继续播放视频</string>
    <string name="resume_playing_message">从 %s 开始继续播放？</string>
    <string name="resume_playing_resume">继续播放</string>
    <string name="resume_playing_restart">重新开始</string>
    <string name="space_is_low">SD 卡空间已快用完。请更删除部分内容。</string>
    <string name="download_fail">下载失败，请稍候重试！</string>
    <string name="image_loader_download">保存</string>
    <string name="toast_save_image_success">图片已成功保存至:/sdcard/Loocha/Photo/目录下</string>
    <string name="toast_save_image_fail">图片下载失败，请稍后重试</string>
    <string name="video_err">无法播放视频</string>
    <string name="sdcard_err">下载失败，请检查sdcard是否可用</string>
    <string name="crop_save_text">保存</string>
    <string name="crop_discard_text">舍弃</string>
    <string name="running_face_detection">请稍候...</string>
    <string name="saving_image">正在保存照片...</string>
    <string name="multiface_crop_help">轻点一张脸开始裁剪。</string>
    <string name="crop_label">修剪照片</string>
    <string name="movie_view_label">电影</string>
    <string name="space">空间</string>
    <string name="pull_to_refresh_pull_label">pull down to refresh…</string>
    <string name="pull_to_refresh_release_label">release to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">loading…</string>
    <string name="pull_to_refresh_load_label">pull down to load more</string>
    <string name="pull_to_refresh_load_more">load more…</string>
    <string name="click_to_refresh_messages">click to refresh</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="pull_to_refresh_from_bottom_load_label">@string/pull_to_refresh_load_label</string>
    <string name="pull_to_refresh_from_bottom_load_more">@string/pull_to_refresh_load_more</string>
    <string name="pull_to_refresh_new_messages">@string/click_to_refresh_messages</string>
    <string name="switch_on">On</string>
    <string name="switch_off">Off</string>
    <string name="str_app_label">Alibaba</string>
    <string name="str_right_at_alibaba">"Version 3.1.3
Copyright © 2012-2014 Alibaba.com.
All rights reserved."</string>
    <string name="str_confirm">Confirm</string>
    <string name="str_agoo_setting_permission_description">make sure agoo push setting take effect</string>
    <string name="str_cancel">Cancel</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_ok">OK</string>
    <string name="str_upload">Upload</string>
    <string name="str_warnning">Warnning</string>
    <string name="str_start_now">Get Started Now</string>
    <string name="str_press_again_exit">Press again to exit.</string>
    <string name="str_loading">Loading…</string>
    <string name="str_sending">Sending…</string>
    <string name="str_server_status_err">Server error!</string>
    <string name="str_search_input_digits">._ 0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="str_edit_text_input_enter_digits">"
,;@:?!/\"\\()^~$*`%+=-#[]{}._&amp;'&lt;>| 0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ"</string>
    <string name="str_edit_number_input_enter_digits">0123456789.</string>
    <string name="str_edit_number_input_enter_digits_positive">0123456789</string>
    <string name="str_network_unavailable_tips">Connection unavailable! Please check your network connection, then refresh below.</string>
    <string name="str_network_data_refresh">Refresh</string>
    <string name="str_attach_can_not_open">"Attachments can only be downloaded to your computer. "</string>
    <string name="str_copy_text_to_clipboard">The content has been copied to clipboard.</string>
    <string name="str_location_unaviable_notice">Turn on \"Location Services\" and allow \"Alibaba\" to get the country you are in.</string>
    <string name="str_tab_spec_home">Home</string>
    <string name="str_tab_spec_search">Search</string>
    <string name="str_tab_spec_mine">My Alibaba</string>
    <string name="str_tab_spec_setting">Settings</string>
    <string name="str_tab_spec_sourcing">AliSourcePro</string>
    <string name="str_tab_spec_more">More</string>
    <string name="update_dialog_ok">Upgrade</string>
    <string name="update_dialog_cancel">Later</string>
    <string name="update_dialog_exit">Exit</string>
    <string name="update_dialog_new_version_found">Upgrade to Alibaba.com App V%s</string>
    <string name="update_dialog_forceupdate">Critical upgrade available. Upgrade now to continue using the App?</string>
    <string name="update_dialog_update_now">A new version of Alibaba.com App is available. Upgrade now?</string>
    <string name="update_dialog_download_title">Downloading…</string>
    <string name="update_progress_name">Alibaba.com App V%s</string>
    <string name="str_category_title">Categories</string>
    <string name="str_category_expand">View More</string>
    <string name="str_category_collapse">Less</string>
    <string name="str_location_title">Supplier Location</string>
    <string name="str_location_expand">View More</string>
    <string name="str_location_collapse">Less</string>
    <string name="str_escrow">Escrow</string>
    <string name="str_onsite_check">Onsite Check</string>
    <string name="str_audited_supplier">Assessed Suppliers</string>
    <string name="str_category_selections">Options</string>
    <string name="str_category_selections_clear_all">Clear All</string>
    <string name="str_category_selected_label">Category: %s</string>
    <string name="str_location_selected_label">Country: %s</string>
    <string name="str_personal_message">Messages</string>
    <string name="str_personal_favorite">My Favorites</string>
    <string name="str_personal_quotes_management">Manage Quotes</string>
    <string name="str_personal_atm">TradeManager</string>
    <string name="str_personal_draft_box">Drafts</string>
    <string name="str_personal_settings">Settings</string>
    <string name="str_personal_contact_us">Contact Us</string>
    <string name="str_personal_about_us">About Us</string>
    <string name="str_personal_buying_request">Buying Requests</string>
    <string name="str_launcher_category">Categories</string>
    <string name="str_launcher_category_history">Recently Viewed</string>
    <string name="str_launcher_category_recommended">Recommended</string>
    <string name="str_launcher_category_hot">Hot Products</string>
    <string name="str_launcher_category_may_like">You May Like</string>
    <string name="str_launcher_category_rfq">Post Buying Request</string>
    <string name="str_launcher_category_all">All Categories</string>
    <string name="str_launcher_rfq_title">Post Buying Request</string>
    <string name="str_launcher_rfq_desc">"Get quotes from verified suppliers.
Submit by image, text, video or voice!"</string>
    <string name="str_launcher_rfq_suppliers">verified suppliers ready to send quotations</string>
    <string name="str_launcher_rfq_get_quote">Get Quotes</string>
    <string name="str_launcher_category_added">Add Top Products</string>
    <string name="str_launcher_change_category_success">Change subscription categories success !</string>
    <string name="str_refine">Refine</string>
    <string name="str_searcher_result_products">Products</string>
    <string name="str_searching_03">Searching…</string>
    <string name="str_pull_down_refresh_label">Scroll down to refresh</string>
    <string name="str_pull_down_release_label">Release to refresh</string>
    <string name="str_release_refreshing_label">Refresh…</string>
    <string name="str_pull_up_refresh_label">Scroll up to load more</string>
    <string name="str_pull_up_release_label">Release to load more</string>
    <string name="str_release_loading_label">Loading…</string>
    <string name="str_search_result_zero_matches">Sorry, no matches were found for %s.Please try other search terms.</string>
    <string name="str_search_result_zero_wants">To quickly find products and get quotes, you can post a Buying Request.</string>
    <string name="str_recommneded_label" formatted="false">%s %s Products</string>
    <string name="str_sign_in">Sign In</string>
    <string name="str_sign_in_btn_register">Join free</string>
    <string name="str_sign_out">Sign Out</string>
    <string name="str_first_name_hint">First Name</string>
    <string name="str_last_name_hint">Last Name</string>
    <string name="str_company_name_hint">Company Name</string>
    <string name="str_email_hint">Email</string>
    <string name="str_create_password_hint">Create Password</string>
    <string name="str_register_license">By creating an account you agree to Alibaba.com Free Membership Agreement.</string>
    <string name="str_register_submit">Submit</string>
    <string name="str_register_phone_number_prefix">+86</string>
    <string name="str_register_phone_number_hint">请输入手机号码</string>
    <string name="str_register_verify_code_hint">验证码</string>
    <string name="str_resend_verify_code">重发验证码（%d秒）</string>
    <string name="str_send_verify">获取验证码</string>
    <string name="str_register_mainland_next_step">下一步</string>
    <string name="str_mainland_company_name_hint">公司名</string>
    <string name="str_mainland_english_name_hint">英文名</string>
    <string name="str_mainland_email_hint">Email</string>
    <string name="str_mainland_password_hint">设置密码</string>
    <string name="str_mainland_submit">提交</string>
    <string name="str_attach_images">Attach Product Images</string>
    <string name="str_rfq_quotation_post_rfq">Post Your Buying Request Now!</string>
    <string name="str_rfq_post_tips_welcome">Welcome! Please complete a Buying Request and receive up to 10 quotes.</string>
    <string name="str_rfq_post_product_name">*Product Name:</string>
    <string name="str_rfq_post_product_category">*Product Category:</string>
    <string name="str_rfq_post_product_category_hint">Please select a category</string>
    <string name="str_rfq_post_product_detail">*Detailed Product Specifications:</string>
    <string name="str_rfq_post_product_detail_hint">Please enter product details here.</string>
    <string name="str_rfq_post_product_detail_remain">%s characters remaining</string>
    <string name="str_rfq_post_attach_maximum_tips">Max. 3 images</string>
    <string name="str_rfq_post_quantity">*Estimated Order Quantity:</string>
    <string name="str_rfq_post_expire_time">*Expiration Date:</string>
    <string name="str_rfq_post_expire_time_tips">Select a date when you no longer want suppliers to contact you.</string>
    <string name="str_rfq_post_send_success">Submitted!</string>
    <string name="str_rfq_post_agine">Post a new Buying Request</string>
    <string name="str_rfq_post_open_rfq">Manage Buying Requests</string>
    <string name="str_mail_sender_to">To:</string>
    <string name="str_mail_sender_subject">Subject:</string>
    <string name="str_mail_sender_footer">"Sent from my phone. 
Waiting for you reply. Thank you!"</string>
    <string name="content_desc_null" />
    <string name="str_alisource_pro_image_tip_button">OK</string>
    <string name="str_alisource_pro_tip_content_second">Add the detail</string>
    <string name="str_alisource_pro_tip_content_third">Get Quotations</string>
    <string name="str_alisource_pro_gallery_tip_title">Send request by image</string>
    <string name="str_alisource_pro_gallery_tip_content_frist">Take photo</string>
</resources>