<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View style="@style/common_blank" />
    <View style="@style/common_divider" />
    <EditText android:textStyle="normal" android:id="@id/id_edit_password_frag_oauth_register" android:hint="@string/str_mainland_company_name_hint" android:singleLine="true" style="@style/ios_edittext" />
    <View style="@style/common_divider_broken" />
    <EditText android:textStyle="normal" android:id="@id/id_edit_password_frag_oauth_register" android:hint="@string/str_mainland_english_name_hint" android:singleLine="true" style="@style/ios_edittext" />
    <View style="@style/common_divider_broken" />
    <EditText android:textStyle="normal" android:id="@id/id_edit_password_frag_oauth_register" android:hint="@string/str_mainland_email_hint" android:singleLine="true" style="@style/ios_edittext" />
    <View style="@style/common_divider_broken" />
    <EditText android:textStyle="normal" android:id="@id/id_edit_password_frag_oauth_register" android:hint="@string/str_mainland_password_hint" android:password="true" android:singleLine="true" style="@style/ios_edittext" />
    <View style="@style/common_divider" />
    <View style="@style/common_blank" />
    <Button android:id="@id/id_btn_submit_frag_oauth_register" android:background="@drawable/button_detail_contact" android:paddingLeft="20.0dip" android:paddingTop="8.0dip" android:paddingRight="20.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_margin_left" android:layout_marginTop="4.0dip" android:layout_marginRight="@dimen/dimen_margin_right" android:text="@string/str_mainland_submit" style="@style/AliButtonTextAppearance.White" />
</LinearLayout>