<?xml version="1.0" encoding="utf-8"?>
<com.alibaba.intl.android.graphics.resizelayout.ResizeScrollLayout android:id="@id/id_layout_activity_buying_request_post" android:background="@drawable/bg_windows_screen" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="13.0sp" android:textColor="@color/color_value_9" android:id="@id/id_label_tips_activity_buying_request_post" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/str_rfq_post_tips_welcome" android:textIsSelectable="false" />
        <TextView android:textSize="13.0sp" android:textColor="@color/color_value_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/str_rfq_post_product_name" android:textIsSelectable="false" />
        <EditText android:textSize="13.0sp" android:textColor="@color/color_value_6" android:textColorHint="@color/color_value_9" android:gravity="top" android:id="@id/id_name_activity_buying_request_post" android:background="@drawable/bg_edit_view_n" android:layout_width="fill_parent" android:layout_height="wrap_content" android:singleLine="false" android:digits="@string/str_edit_text_input_enter_digits" android:inputType="textMultiLine" />
        <TextView android:textSize="13.0sp" android:textColor="@color/color_value_3" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/str_rfq_post_product_category" android:textIsSelectable="false" />
        <TextView android:textSize="13.0sp" android:textColor="@color/color_value_6" android:textColorLink="@color/color_value_9" android:id="@id/id_category_activity_buying_request_post" android:background="@drawable/spinner_background_holo_light" android:paddingLeft="12.0dip" android:paddingBottom="8.0dip" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/str_rfq_post_product_category_hint" />
        <TextView android:textSize="13.0sp" android:textColor="@color/color_value_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/str_rfq_post_product_detail" android:textIsSelectable="false" />
        <EditText android:textSize="13.0sp" android:textColor="@color/color_value_6" android:textColorHint="@color/color_value_9" android:gravity="top" android:id="@id/id_detail_activity_buying_request_post" android:background="@drawable/bg_edit_view_n" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:hint="@string/str_rfq_post_product_detail_hint" android:singleLine="false" android:digits="@string/str_edit_text_input_enter_digits" android:inputType="textMultiLine" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_value_9" android:id="@id/id_remaining_activity_buying_request_post" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginTop="1.0dip" android:text="@string/str_rfq_post_product_detail_remain" android:textIsSelectable="false" />
        <RelativeLayout android:paddingTop="4.0dip" android:paddingBottom="4.0dip" android:layout_width="fill_parent" android:layout_height="88.0dip" android:layout_marginTop="12.0dip">
            <GridView android:gravity="left" android:id="@id/id_grid_attachment_activity_buying_request_post" android:padding="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:listSelector="@null" android:horizontalSpacing="2.0dip" android:verticalSpacing="2.0dip" android:numColumns="4" />
            <LinearLayout android:orientation="vertical" android:id="@id/id_tips_attachment_activity_buying_request_post" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="84.0dip" android:layout_centerVertical="true">
                <TextView android:textSize="14.0sp" android:textColor="@color/color_value_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_attach_images" />
                <TextView android:textSize="12.0sp" android:textColor="@color/color_value_9" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_rfq_post_attach_maximum_tips" />
            </LinearLayout>
        </RelativeLayout>
        <TextView android:textSize="13.0sp" android:textColor="@color/color_value_3" android:id="@id/id_label_quantity_activity_buying_request_post" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/str_rfq_post_quantity" android:textIsSelectable="false" />
        <LinearLayout android:gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:textSize="13.0sp" android:textColor="@color/color_value_6" android:textColorHint="@color/color_value_9" android:gravity="top" android:id="@id/id_quantity_activity_buying_request_post" android:background="@drawable/bg_edit_view_n" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="96.0dip" android:singleLine="false" android:maxLength="9" android:inputType="number" />
            <Spinner android:id="@id/id_quantity_unit_activity_buying_request_post" android:background="@drawable/spinner_background_holo_light" android:paddingLeft="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:prompt="@string/str_rfq_post_product_category_hint" android:spinnerMode="dropdown" />
        </LinearLayout>
        <TextView android:textSize="13.0sp" android:textColor="@color/color_value_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12.0dip" android:text="@string/str_rfq_post_expire_time" android:textIsSelectable="false" />
        <TextView android:textSize="13.0sp" android:textColor="@color/color_value_6" android:textColorHint="@color/color_value_9" android:id="@id/id_expire_time_activity_buying_request_post" android:background="@drawable/spinner_background_holo_light" android:paddingLeft="12.0dip" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_value_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/str_rfq_post_expire_time_tips" android:textIsSelectable="false" />
        <com.alibaba.intl.android.apps.poseidon.ui.control.CtrlFooterActionBar android:id="@id/id_footer_action_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="-8.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="-8.0dip" android:layout_marginBottom="10.0dip" />
    </LinearLayout>
</com.alibaba.intl.android.graphics.resizelayout.ResizeScrollLayout>