<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:baselineAligned="false"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="18.0sp" android:textColor="@color/color_value_3" android:gravity="center" android:id="@id/id_title_dialog_tip" android:background="@drawable/bg_tab_indicator_selected" android:paddingLeft="10.0dip" android:paddingTop="15.0dip" android:paddingRight="10.0dip" android:paddingBottom="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/str_alisource_pro_gallery_tip_title" />
    <RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/id_content_image_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/alisource_pro_photo_tip" android:contentDescription="@string/content_desc_null" />
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toRightOf="@id/id_content_image_view">
            <TextView android:textSize="16.0sp" android:textColor="@color/color_value_3" android:id="@id/id_content_frist_dialog_tip" android:background="@color/white" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/str_alisource_pro_gallery_tip_content_frist" />
            <TextView android:textSize="16.0sp" android:textColor="@color/color_value_3" android:id="@id/id_content_second_dialog_tip" android:background="@color/white" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/str_alisource_pro_tip_content_second" />
            <TextView android:textSize="16.0sp" android:textColor="@color/color_value_3" android:id="@id/id_content_third_dialog_tip" android:background="@color/white" android:paddingLeft="12.0dip" android:paddingTop="12.0dip" android:paddingRight="12.0dip" android:paddingBottom="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/str_alisource_pro_tip_content_third" />
        </LinearLayout>
    </RelativeLayout>
    <View android:background="@color/color_value_c" android:layout_width="fill_parent" android:layout_height="0.5dip" />
    <LinearLayout android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:textSize="16.0sp" android:textColor="@color/bg_orange_common" android:id="@id/id_button_confirm_dialog_tip" android:background="@drawable/button_color_white_blue" android:paddingTop="12.0dip" android:paddingBottom="12.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/str_alisource_pro_image_tip_button" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>