<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@drawable/bg_windows_screen" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/color_value_3" android:gravity="center" android:id="@id/id_success_activity_buying_request_post" android:paddingBottom="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:text="@string/str_rfq_post_send_success" android:drawableLeft="@drawable/ic_success" android:drawablePadding="8.0dip" android:textIsSelectable="false" />
    <Button android:id="@id/id_post_btn_ctrl_footer_action_bar" android:background="@drawable/button_common_orange" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/str_rfq_post_agine" style="@style/AliButtonTextAppearance.White" />
    <Button android:id="@id/id_rfq_btn_ctrl_footer_action_bar" android:background="@drawable/button_common_light" android:paddingTop="8.0dip" android:paddingBottom="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/str_rfq_post_open_rfq" style="@style/AliButtonTextAppearance.Black" />
</LinearLayout>